js/js.translator/testData/incremental/invalidation/toplevelProperties/lib2/l2.18.kt
fun testToplevelProperties(): Int {
    return 18
}
